Fixed onboarding z-index issue

--- a/public/css/starbar-hellomusic.css
+++ b/public/css/starbar-hellomusic.css
@@ -674,7 +674,7 @@
 	line-height: 40px;
 	position: absolute;
 	bottom: 5px;
-	z-index: 9999;
+	z-index: 2147483647;
 	left: 300px;
 	font-weight: bold;
 	font-size: 12px;
@@ -777,27 +777,17 @@
 	width: 135px;
 }
 
-#sayso-starbar #sb_colorbox .sb_rewardItem .sb_user-points-box{
+#sayso-starbar #sb_colorbox .sb_rewardItem .sb_user-points-box .sb_progressBar{
 	width: 85%;
-	margin: 0px auto;
 }
 
-#sayso-starbar #sb_colorbox .sb_rewardItem .sb_user-points-box .sb_progressBar{
-	width: auto;
+#sayso-starbar #sb_colorbox .sb_rewardItem .sb_user-points-box{
+	margin: 10px 0px;
 }
 
 #sayso-starbar #sb_colorbox .sb_rewardItem .sb_column50{
 	font-size: 10px;
 	line-height: 15px;
-}
-
-#sayso-starbar #sb_colorbox .sb_rewardItem .sb_column50:last-child{
-	float: right;
-}
-
-#sayso-starbar #sb_colorbox .sb_rewardItem .sb_column50 .sb_user-points-box{
-	margin: 0;
-	width: 90%;
 }
 
 #sayso-starbar #sb_colorbox .sb_rewardItem .sb_column50 .sb_user-points-box .sb_progressBar{
